@@ -10,6 +10,7 @@
 * Fix issue:62 - don't reset the platform in an xcode project unless the info file is being parsed
 * Fix issue:agile-app-issues:1 autocomplete issue titles when creating relationships
 * Fix some velocity calculations
+* Fix issue where restricted users could not edit their own details
 
 2.0-rc1
 
